double handling error, remove array testing